--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="intro">
                 <h1 class="intro__name">Hi 👋 , I’m <span class="intro__name-primary">Susham</span></h1>
                 <div class="intro__description">
-                    <p >Software Engineer, currently living in Austin, TX. I am passionate about building scalable applications and blog about my experiences. Currently, I am learning about GraphQL and working on my side projects. </p>
+                    <p >A Software Engineer, currently living in Austin, TX. I am passionate about building scalable applications and blog about my experiences. Currently, I am learning about GraphQL and working on my side projects. </p>
                 </div>
         
             </section> 
