including projects.html and related css files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <ul class="navigation__nav">
                 
                     <li class="navigation__blog"><a href="https://blog.sushamkumar.dev">Blog</a></li>
-                    <li class="navigation__projects">Projects</li>
+                    <li class="navigation__projects">
+                        <a href="projects.html">Projects</a></li>
                     
                     <li class="navigation__about">About</li>
                     <li class="navigation__contact">Contact</li>
