Redesigned Projects page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div class="container">
             <nav class="navigation">
-                    <div class="navigation__logo">Susham Yerabolu</div>
+                    <div class="navigation__logo"><a href="https://sushamkumar.dev">Susham Yerabolu</a></div>
 
                 <ul class="navigation__nav">
                 
